[tool.poetry]
name = "storyarc-app"
version = "0.1.0"
description = ""
authors = ["robotjeans <shawnjsx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
django-filter = "^21.1"
django-autoslug = "^1.9.8"
Pillow = "^9.1.0"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.48"
psycopg2-binary = "^2.9.3"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
